--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,19 @@ android {
 apply plugin: 'android-apt'
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.google.android.gms:play-services-maps:9.8.0'
-    compile 'com.google.android.gms:play-services-location:9.8.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
 }
+
+//dependencies {
+//    compile 'com.android.support:appcompat-v7:23.4.0'
+//    compile 'com.google.android.gms:play-services-maps:9.8.79'
+//    compile 'com.google.android.gms:play-services-location:9.8.79'
+//    compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
+//    compile 'com.google.android.gms:play-services-auth:9.8.79'
+//    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
+//}
